# Zap

./: .gitignore  .gitmodules  Actor.cpp  Actor.h  App.cpp  CMakeLists.txt  Model.cpp  PBRShader.frag.spv  PBRShader.vert.spv  README.md  Renderer.cpp  Renderer.h  Setup.bat  SimpleRenderer.h  Vertex.h  VisibleActor.cpp  VisibleActor.h  Window.cpp  Window.h  Zap.cpp  Zap.h  Zap.sln  Zap.vcxproj  Zap.vcxproj.filters  imgui.ini  shader.vert.spv
Dependencies/: clone_dependencies.bat
Quicksave/: VisibleActor.cpp  VisibleActor.h
Shader/: ShaderCompile.bat
Shader/src/: PBRShader.frag  PBRShader.vert  pathTrace.rchit  pathTrace.rgen  pathTrace.rint  pathTrace.rmiss  raytrace.rchit  raytrace.rgen  raytrace.rmiss  shader.vert
include/: Actor.h  Camera.h  Light.h  Model.h  PBRenderer.h  Renderer.h  SimpleRenderer.h  Vertex.h  VisibleActor.h  Window.h  Zap.h
include/Zap/: AssetHandler.h  Event.h  EventHandler.h  FileLoader.h  Gui.h  ModelLoader.h  PBRenderer.h  Renderer.h  Serializer.h  SimpleRenderer.h  UUID.h  Vertex.h  Window.h  Zap.h
include/Zap/Physics/: Geometry.h  HitMesh.h  Shape.h
include/Zap/Rendering/: DebugRenderTask.h  Gui.h  PBRenderer.h  PathTacer.h  RaytracingRenderer.h  RenderTaskTemplate.h  RenderTemplate.h  Renderer.h  SimpleRenderer.h  Window.h
include/Zap/Scene/: Actor.h  AudioListener.h  AudioSource.h  Camera.h  Component.h  Light.h  Material.h  Mesh.h  MeshComponent.h  Model.h  PhysicsComponent.h  Scene.h  Shape.h  Texture.h  Transform.cpp  Transform.h  VisibleActor.h
src/: Actor.cpp  App.cpp  Camera.cpp  Light.cpp  Model.cpp  PBRenderer.cpp  Renderer.cpp  SimpleRenderer.cpp  VisibleActor.cpp  Window.cpp  Zap.cpp
src/Zap/: App.cpp  AssetHandler.cpp  EventHandler.cpp  FileLoader.cpp  Gui.cpp  ModelLoader.cpp  PBRenderer.cpp  Renderer.cpp  Serializer.cpp  SimpleRenderer.cpp  UUID.cpp  Vertex.cpp  Window.cpp  Zap.cpp
src/Zap/Physics/: Geometry.cpp  HitMesh.cpp  Shape.cpp
src/Zap/Rendering/: DebugRenderTask.cpp  Gui.cpp  PBRenderer.cpp  PathTacer.cpp  RaytracingRenderer.cpp  RenderTaskTemplate.cpp  Renderer.cpp  SimpleRenderer.cpp  Window.cpp
src/Zap/Scene/: Actor.cpp  AudioListener.cpp  AudioSource.cpp  Camera.cpp  Component.cpp  Light.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  Model.cpp  PhysicsComponent.cpp  PhysicsComponent.h  Scene.cpp  Shape.cpp  Texture.cpp  Transform.cpp  VisibleActor.cpp
